--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kosmos Perigäum Rechner</title>
+    <title>Kosmos Perigäum Rechner V1.3</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <!-- WICHTIGE KORREKTUR: Der führende Schrägstrich (/) wurde zu (./) geändert, um den Rollup-Fehler zu beheben -->
+    <script type="module" src="./src/index.tsx"></script> 
   </body>
 </html>
-
