--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class="wrapper">
       <h1>Perigäum-Rechner</h1>
       <p class="subtitle">
-        Jahr eingeben und sehen, wann Merkur&nbsp;– Pluto im Perigäum standen.
+        Jahr eingeben und sehen, wann Sonne und die Planeten von Merkur bis Pluto im Perigäum sind.
       </p>
 
       <form id="periForm">
