--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       -webkit-font-smoothing: antialiased;
     }
 
-    /* Anpassung: keine 100vh-Mindesthöhe, kein Flex-Center,
-       damit im iFrame kein eigener Scrollbalken entsteht */
+    /* Kein 100vh-Layout, damit im iFrame kein eigener Scrollbalken entsteht */
     .page {
       width: 100%;
       padding: 16px;
@@ -39,7 +38,7 @@
     .wrapper {
       width: 100%;
       max-width: 800px;
-      margin: 0 auto; /* mittig zentriert, aber normales Block-Layout */
+      margin: 0 auto;
       background: linear-gradient(145deg, #050505, #101010);
       border-radius: 18px;
       border: 1px solid var(--copper-dark);
@@ -230,6 +229,19 @@
       color: var(--copper-soft);
       text-align: right;
     }
+
+    /* NEU: Handy-Optimierung für sehr schmale Displays */
+    @media (max-width: 400px) {
+      .controls {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      button {
+        width: 100%;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body>
@@ -394,3 +406,5 @@
   </script>
 </body>
 </html>
+
+
